force-app/main/default/objects/Equipment_Maintenance__c/Equipment_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Equipment Maintenance</label>
    <nameField>
        <displayFormat>MAINT-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Maintenance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>