force-app/main/default/objects/Equipment_Maintenance__c/fields/As_Found_Condition__c.field-meta.xml
<CustomField>
    <fullName>As_Found_Condition__c</fullName>
    <label>As Found Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Tolerance</fullName>
            </value>
            <value>
                <fullName>Out of Tolerance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>