force-app/main/default/objects/Equipment_Maintenance__c/fields/As_Found_Condition_Details__c.field-meta.xml
<CustomField>
    <fullName>As_Found_Condition_Details__c</fullName>
    <label>As Found Condition Details</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>