force-app/main/default/objects/Equipment_Maintenance__c/fields/Calibration_Maintenance_Details__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Maintenance_Details__c</fullName>
    <inlineHelpText>What exactly did you do?</inlineHelpText>
    <label>Calibration/Maintenance Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>