force-app/main/default/objects/Equipment_Maintenance__c/fields/Date_and_Time_of_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Maintenance__c</fullName>
    <label>Date of Maintenance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>