force-app/main/default/objects/Equipment_Maintenance__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Quality Number must start with &quot;EQUIP-&quot;</errorMessage>
        <filterItems>
            <field>PDLM__Quality__c.Name</field>
            <operation>startsWith</operation>
            <value>EQUIP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PDLM__Quality__c</referenceTo>
    <relationshipLabel>Equipment Maintenance</relationshipLabel>
    <relationshipName>Equipment_Maintenance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>