force-app/main/default/objects/Equipment_Maintenance__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <formula>Equipment__r.Description_of_Equipment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Description</label>
    <type>Text</type>
</CustomField>