force-app/main/default/objects/Equipment_Maintenance__c/fields/Equipment_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Manufacturer__c</fullName>
    <formula>Equipment__r.Equipment_Manufacturer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Manufacturer</label>
    <type>Text</type>
</CustomField>