force-app/main/default/objects/Equipment_Maintenance__c/fields/Equipment_Model__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Model__c</fullName>
    <formula>Equipment__r.Model__c</formula>
    <label>Equipment Model</label>
    <type>Text</type>
</CustomField>