force-app/main/default/objects/Equipment_Maintenance__c/fields/Equipment_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Serial_Number__c</fullName>
    <formula>Equipment__r.Serial_Number__c</formula>
    <label>Equipment Serial Number</label>
    <type>Text</type>
</CustomField>