force-app/main/default/objects/Equipment_Maintenance__c/fields/If_In_House_Maintenance_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>If_In_House_Maintenance_Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of Employee</inlineHelpText>
    <label>If In-House, Maintenance Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Equipment_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>