force-app/main/default/objects/Equipment_Maintenance__c/fields/If_Out_of__c.field-meta.xml
<CustomField>
    <fullName>If_Out_of__c</fullName>
    <label>If Out of Tolerance, Product Impact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>