force-app/main/default/objects/Equipment_Maintenance__c/fields/If_Outsourced_Maintenance_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>If_Outsourced_Maintenance_Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of Calibration Vendor</inlineHelpText>
    <label>If Outsourced, Maintenance Performed By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Maintenance</relationshipLabel>
    <relationshipName>Equipment_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>