force-app/main/default/objects/Equipment_Maintenance__c/fields/If_yes_describe_product_impact__c.field-meta.xml
<CustomField>
    <fullName>If_yes_describe_product_impact__c</fullName>
    <inlineHelpText>Specify related CAPA</inlineHelpText>
    <label>If Yes, Describe Product Impact</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>