force-app/main/default/objects/Equipment_Maintenance__c/fields/In_House_or_Outsourced__c.field-meta.xml
<CustomField>
    <fullName>In_House_or_Outsourced__c</fullName>
    <label>In-House or Outsourced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performed In-House</fullName>
            </value>
            <value>
                <fullName>Performed by Calibration Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>