force-app/main/default/objects/Equipment_Maintenance__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Preventive Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>