force-app/main/default/objects/Equipment_Maintenance__c/fields/Out_of_Tolerance_Investigation_Required__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Tolerance_Investigation_Required__c</fullName>
    <label>Out of Tolerance Investigation Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>