force-app/main/default/objects/Equipment_Maintenance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Equipment__c</columns>
    <columns>Equipment_Description__c</columns>
    <columns>Maintenance_Type__c</columns>
    <columns>Date_and_Time_of_Maintenance__c</columns>
    <columns>As_Found_Condition__c</columns>
    <columns>Equipment_Manufacturer__c</columns>
    <columns>Equipment_Model__c</columns>
    <columns>Equipment_Serial_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>