force-app/main/default/objects/Equipment_Maintenance__c/listViews/Equipment_to_Maintain_within_30_Days.listView-meta.xml
<ListView>
    <fullName>Equipment_to_Maintain_within_30_Days</fullName>
    <columns>Equipment_Model__c</columns>
    <columns>Equipment_Serial_Number__c</columns>
    <columns>NAME</columns>
    <columns>Maintenance_Type__c</columns>
    <columns>Date_and_Time_of_Maintenance__c</columns>
    <columns>As_Found_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>Equipment to Maintain within 30 Days</label>
</ListView>